vlib/v/checker/tests/arrow_op_wrong_right_type_err_b.vv
fn main() {
	ch := i64(3)
	obj := <-ch
	println(obj)
}
